chore: generate routes
